# music-organizer

./: .gitignore  Cargo.toml  README.md  install.sh  rustfmt.toml
src/: changes.rs  checks.rs  fs.rs  lib.rs  main.rs  meta.rs  update.rs
src/cli/: args.rs  display.rs  main.rs
src/core/: changes.rs  checks.rs  cleanup.rs  fs.rs  index.rs  lib.rs  meta.rs  update.rs  util.rs
