[package]
name = "music-organizer"
version = "0.2.0"
authors = ["Saecki <tobiasschmitz2001@gmail.com>"]
edition = "2021"

[lib]
name = "music_organizer"
path = "src/core/lib.rs"

[[bin]]
name = "music-organizer"
path = "src/cli/main.rs"

[dependencies]
clap = { version = "4.0.29", features = ["wrap_help", "cargo"] }
clap_complete = "4.0.6"
regex = "1.7.0"
id3 = "1.5.1"
mp4ameta = "0.11.0"
metaflac = "0.2.5"
lazy_static = "1.4.0"
colored = "2.0.0"
shellexpand = "3.0.0"
crossbeam-channel = "0.5.6"
