[package]
name = "music-organizer"
version = "0.2.0"
authors = ["Saecki <tobiasschmitz2001@gmail.com>"]
edition = "2021"

[lib]
name = "music_organizer"
path = "src/core/lib.rs"

[[bin]]
name = "music-organizer"
path = "src/cli/main.rs"

[dependencies]
clap = { version = "4.5", features = ["wrap_help", "cargo"] }
clap_complete = "4.5"
regex = "1.10.6"
id3 = "1.14.0"
mp4ameta = "0.11.0"
metaflac = "0.2.7"
lazy_static = "1.5.0"
colored = "2.1.0"
shellexpand = "3.1.0"
crossbeam-channel = "0.5.13"
